# Spatial-Tracking-CV-Client

./: .gitignore  CMakeLists.txt  CVTracking  CVTracking.cpp  EchoTestServer.cpp  README.md
include/: Vector3.h
serv_src/: EchoTestServer.cpp
src/: CVTracking.cpp  Vector3.cpp
